# learn-vulkan

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  notes.md  readme.md
apps/: CMakeLists.txt
apps/assets/shaders/: CMakeLists.txt  gradient_color.comp  simple_mesh.vert  sky.comp  triangle.frag
apps/main/: CMakeLists.txt  main.cpp
apps/triangle/: CMakeLists.txt  main.cpp
include/: engine.h  renderable.h  vk_descriptors.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h
notes/: 0.1.Introduction.md  notes.md
src/: CMakeLists.txt  camera.cpp  engine.cpp  renderable.cpp  vk_descriptors.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp
